# lib/db/src/schema/index.ts
@@ -20,3 +20,4 @@
 export * from "./users";
 export * from "./practiceSessions";
 export * from "./swingRecords";
+export * from "./tempoVideos";
